Version 0.188 some time after 0.187

readelf: Add -D, --use-dynamic option.

debuginfod: Add --disable-source-scan option.

libdwfl: Add new function dwfl_get_debuginfod_client.
         Add new function dwfl_frame_reg.
         Add new function dwfl_report_offline_memory.

Version 0.187

debuginfod: Support -C option for connection thread pooling.

debuginfod-client: Negative cache file are now zero sized instead of
                   no-permission files.

addr2line: The -A, --absolute option, which shows file names including
           the full compilation directory is now the default.  To get the
           old behavior use the new option --relative.

readelf, elflint: Recognize FDO Packaging Metadata ELF notes

libdw, debuginfo-client: Load libcurl lazily only when files need to
                         be fetched remotely. libcurl is now never
                         loaded when DEBUGINFOD_URLS is unset. And when
                         DEBUGINFOD_URLS is set, libcurl is only loaded
                         when the debuginfod_begin function is called.

Version 0.186

debuginfod-client: Default $DEBUGINFOD_URLS is computed from drop-in files
                   /etc/debuginfod/*.urls rather than hardcoded into the
                   /etc/profile.d/debuginfod* scripts.
                   Add $DEBUGINFOD_MAXSIZE and $DEBUGINFOD_MAXTIME settings
                   for skipping large/slow transfers.
                   Add $DEBUGINFOD_RETRY for retrying aborted lookups.

debuginfod: Supply extra HTTP response headers, describing archive/file
            names that satisfy the requested buildid content.
            Support -d :memory: option for in-memory databases.
            Protect against loops in federated server configurations.
            Add -r option to use -I/-X regexes for grooming stale files.
            Protect against wasted CPU from duplicate concurrent requests.
            Limit the duration of groom ops roughly to rescan (-t) times.