@@ -1,3 +1,7 @@
+2022-10-18  Daniel Thornburgh  <dthorn@google.com>
+
+	* debuginfod_find_debuginfo.3: Document DEBUGINFOD_HEADERS_FILE.
+
 2022-09-02  Frank Ch. Eigler  <fche@redhat.com>
 
 	* debuginfod_find_debuginfo.3: Tweaked debuginfod_get_headers docs.
